--- a/src/app/modules/productos/productos.component.html
+++ b/src/app/modules/productos/productos.component.html
@@ -49,13 +49,12 @@
             <div class="col-12">
               <label for="usuario" class="form-label">precio</label>
               <div class="input-group has-validation">
-                <span class="input-group-text">@</span>
                 <input
                   type="number"
                   name="precio"
                   class="form-control"
                   id="precio"
-                  placeholder="Username"
+                  placeholder="precio"
                   formControlName="precio"
                 />
               </div>
@@ -71,14 +70,14 @@
             </div>
 
             <div class="col-12">
-              <label for="email" class="form-label">strock</label>
+              <label for="email" class="form-label">stock</label>
               <input
-                name="strock"
-                type="strock"
+                name="stock"
+                type="number"
                 class="form-control"
-                id="strock"
-                placeholder="you@example.com"
-                formControlName="strock"
+                id="stock"
+                placeholder="stock"
+                formControlName="stock"
               />
               <div
                 [hidden]="
