--- a/src/app/modules/productos/productos.component.html
+++ b/src/app/modules/productos/productos.component.html
@@ -2,7 +2,7 @@
   <div class="row justify-content-evenly align-items-md-stretch">
     <div class="m-md-3 mt-1 col-md-4">
       <div class="h-100 p-5 text-bg-dark rounded-3">
-        <h4 class="text-center mb-3">Crear actor</h4>
+        <h4 class="text-center mb-3">Crear producto</h4>
         <form [formGroup]="frmAltaProducto" class="needs-validation" novalidate>
           <div class="row g-3 justify-content-evenly">
             <div class="col-sm-6">
