--- a/src/app/modules/user/components/login/login.component.html
+++ b/src/app/modules/user/components/login/login.component.html
@@ -59,6 +59,13 @@
       >
         Login
       </button>
+      <button
+        class="m-1 btn btn-lg btn-outline-danger btn-block"
+        type="button"
+        (click)="loginAdmin()"
+      >
+        Login admin
+      </button>
     </div>
   </form>
 </div>
