--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -33,6 +33,15 @@
       <a class="nav-link text-light" routerLink="listadoPublico"
         >Listado Publico</a
       >
+      <a
+        *ngIf="
+          userService.estaLogueado &&
+          userService.usuarioActivo().tipo === 'admin'
+        "
+        class="nav-link text-warning"
+        routerLink="container"
+        >Container</a
+      >
     </div>
   </div>
   <div class="d-flex">
