--- a/src/app/modules/container/components/actualizacion-container/actualizacion-container.component.html
+++ b/src/app/modules/container/components/actualizacion-container/actualizacion-container.component.html
@@ -76,7 +76,7 @@
             type="button"
             (click)="actualizarContainer()"
           >
-            Crear
+            Actualizar Container
           </button>
         </form>
       </div>
