--- a/src/app/modules/container/container.component.html
+++ b/src/app/modules/container/container.component.html
@@ -38,7 +38,7 @@
       <h2>Modificar container</h2>
       <app-actualizacion-container
         [containerRecibido]="container"
-        (eventNuevoContainer)="handlerUpdateontainer($event)"
+        (eventActualizaContainer)="handlerUpdateontainer($event)"
       ></app-actualizacion-container>
     </div>
   </div>
